syntax = "proto3";
option go_package="../userService";

package userService;

message DouYinUserRegisterRequest {
  string username = 1; // 注册用户名,最长32个字符  
  string password = 2; // 密码,最长32个字符
}

message DouYinUserRegisterResponse {
  int32 status_code = 1; // 状态码,0-成功,其他值-失败
  string status_msg = 2; // 返回状态描述
  int64 user_id = 3; // 用户id 
  string token = 4; // 用户鉴权token
}

message DouYinUserLoginRequest {
  string username = 1; // 登录用户名
  string password = 2; // 登录密码  
}

message DouYinUserLoginResponse {
  int32 status_code = 1; // 状态码,0-成功,其他值-失败
  string status_msg = 2; // 返回状态描述
  int64 user_id = 3; // 用户id
  string token = 4; // 用户鉴权token
}

message DouYinUserRequest {
  int64 user_id = 1; // 用户id
  string token = 2; // 用户鉴权token  
}

message DouYinUserResponse {
  int32 status_code = 1; // 状态码,0-成功,其他值-失败
  string status_msg = 2; // 返回状态描述
  User user = 3; // 用户信息
}

message User {
  int64 id = 1; // 用户id
  string name = 2; // 用户名称  
  int64 follow_count = 3; // 关注总数
  int64 follower_count = 4; // 粉丝总数
  bool is_follow = 5; // true-已关注,false-未关注
  string avatar = 6; //用户头像
  string background_image = 7; //用户个人页顶部大图
  string signature = 8; //个人简介
  int64 total_favorited = 9; //获赞数量
  int64 work_count = 10; //作品数量
  int64 favorite_count = 11; //点赞数量
}

service RegisterService {
	//rpc 服务的函数名 （传入参数）返回（返回参数）
	rpc Register (DouYinUserRegisterRequest) returns (DouYinUserRegisterResponse);
}

service LoginService {
	//rpc 服务的函数名 （传入参数）返回（返回参数）
	rpc Login (DouYinUserLoginRequest) returns (DouYinUserLoginResponse);
}

service UserService {
	//rpc 服务的函数名 （传入参数）返回（返回参数）
	rpc Find (DouYinUserRequest) returns (DouYinUserResponse);
}